--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,10 +3,12 @@
 
   display: none;
   position: fixed;
+  left: 0;
+  right: 0;
   background-color: #eee;
   padding: 24px;
   max-height: 70%;
-  max-width: 55%;
+  width: 55%;
   margin: auto;
   overflow-y: auto;
   z-index: 1000;
